frontend/src/style/checkout.css
.checkout-header {
  width: 92%;
  margin: 0 auto;
  margin-top: 48px;
}

.checkout-form-section {
  width: 92%;
  margin: 0 auto;
}

.checkout-form {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: stretch;
  gap: 2rem;
}

.checkout-form-container {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: stretch;
  gap: 1rem;
}

.checkout-form-box {
  display: flex;
  flex-direction: column;
  justify-content: start;
  align-items: stretch;
  gap: 0.5rem;
}

.checkout-form-box.address-container {
  margin-top: 1.5rem;
}
.checkout-form-box.checkbox-box {
  display: flex;
  flex-direction: row;
}

.checkout-form-input {
  min-height: 48px;
  border-radius: 0.5rem;
  background-color: #ffffff;
  border: 1px solid rgba(33, 33, 33, 40%);
  padding-inline: 0.75rem;
}

.checkbox-area {
  width: 48px;
  aspect-ratio: 1/1;
  display: flex;
  align-items: center;
}

.checkout-form-input.checkbox {
  width: 16px;
  aspect-ratio: 1/1;
}

.checkout-form-input:focus-visible {
  outline: 2px solid #212121;
}

.checkout-form-box.coupon-container {
  margin-top: 1.5rem;
}

/* nascondi campo */
.hidden {
  display: none;
}

